# kospo

./: .gitignore
kospo_backend_python/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
kospo_backend_python/scripts/: start_server.py
kospo_backend_python/src/: main.py
kospo_backend_python/src/api/: chat_history.py  chatbot.py
kospo_backend_python/src/data/: combustion_tag.json  phase_infomation.json  reference_data.json  vibration_tag.json
kospo_backend_python/src/data/faiss_index/: index.faiss  index.pkl
kospo_backend_python/src/modules/chatbot/: llm_client.py  prompt.py  rag_client.py  redis_client.py  state.py  workflow.py
kospo_backend_python/tests/: vector_store.py
